--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 
 server.port=8080
+
+#DOCUMENTATION
 springdoc.swagger-ui.enabled=true
 
 #POSTGRES
@@ -16,3 +18,6 @@ spring.jpa.hibernate.ddl-auto=update
 #SECOND LEVEL CACHE
 hibernate.cache.use_second_level_cache=true
 hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
+
+#SCHEDULING OCR TASKS
+spring.task.scheduling.pool.size=1000
