--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,23 @@ version: "3.8"
 
 services:
 
+  ocr-app:
+    container_name: ocr_app
+    image: ocr-image:latest
+    build:
+      dockerfile: Dockerfile
+      context: ./
+    networks: ['net']
+    ports:
+      - "8080:8080"
+
+
   postgresql:
     image: postgres:14.5
     container_name: postgresql
-
+    hostname: postgres
     volumes:
-      - ./data/db:/home/postgresql/data
+      - ./data/db:/var/lib/postgresql/data
 
     environment:
       POSTGRES_USER: admin
@@ -15,6 +26,7 @@ services:
       POSTGRES_DB: ocr
     ports:
       - "5433:5432"
+    networks: ['net']
 
 
   pgadmin:
@@ -29,3 +41,7 @@ services:
       PGADMIN_DEFAULT_PASSWORD: root
     ports:
       - "5050:80"
+    networks: ['net']
+networks:
+  net:
+    driver: bridge
