--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 
 server.port=8080
-
+#POSTGRES
+spring.r2dbc.url=r2dbc:postgresql://host.docker.internal:5433/ocr
+spring.r2dbc.username=admin
+spring.r2dbc.password=admin
 #DOCUMENTATION
 springdoc.swagger-ui.enabled=true
-
-
 
 #SCHEDULING OCR TASKS
 spring.task.scheduling.pool.size=1000
