15º commit: dev branch created

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 server.port=8080
 #POSTGRES
-spring.r2dbc.url=r2dbc:postgresql://host.docker.internal:5433/ocr
+spring.r2dbc.url=r2dbc:postgresql://localhost:5433/ocr
 spring.r2dbc.username=admin
 spring.r2dbc.password=admin
 #DOCUMENTATION
