--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,12 +18,12 @@ services:
     container_name: postgresql
     hostname: postgres
     volumes:
-      - ./data/db:/var/lib/postgresql/data
+      - ./data/db:/home/postgresql/data
 
     environment:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
-      POSTGRES_DB: ocr
+      POSTGRES_DB: nfce
     ports:
       - "5433:5432"
     networks: ['net']
