--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,19 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>4.7.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-chrome-driver</artifactId>
+			<version>4.7.1</version>
+		</dependency>
+
+
 
 
 
