--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,28 +1,8 @@
 
 spring:
   r2dbc:
-    url: r2dbc:postgresql://localhost:5433/ocr
+    url: r2dbc:postgresql://localhost:5433/nfce
     username: admin
     password: admin
 ---
 
-spring:
-  r2dbc:
-    url: r2dbc:tc:postgresql:///testdb?TC_IMAGE_TAG=14-alpine
-  config:
-    activate:
-      on-profile: integration-test
-
----
-
-spring:
-  r2dbc:
-    url: r2dbc:postgresql://host.docker.internal:5433/ocr
-    username: admin
-    password: admin
-  config:
-    activate:
-      on-profile: production-docker
-
-
----
