23º commit: Swagger is running on http://localhost:8080/swagger-ui.html

--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,12 @@
 
 		<dependency>
 			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-ui</artifactId>
-			<version>1.6.14</version>
+			<artifactId>springdoc-openapi-webflux-ui</artifactId>
+			<version>1.6.4</version>
 		</dependency>
+
+
+
 
 		<dependency>
 			<groupId>net.sourceforge.tess4j</groupId>
@@ -179,6 +182,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${project.parent.version}</version>
 				<configuration>
 					<excludes>
 						<exclude>
